--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,39 +2,60 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  height: 100vh;
   background: #1b1b1b;
   font-family: 'Open Sans', sans-serif;
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
   display: block;
-  height: 4rem;
+  min-height: 4rem;
   width: 100vw;
   background: linear-gradient(180deg, black, rgba(0,0,0,.5), transparent);
   color: white;
-  padding: 0 1.5rem;
+  padding: .5rem 1.5rem;
+  display: flex;
+  align-items: stretch;
+  box-sizing: border-box;
+  z-index: 9;
 }
 header > h1 {
   font-size: 1.5rem;
   font-weight: 300;
   margin: 0;
-  line-height: 4rem;
+  flex: 1 1 auto;
+}
+header > a {
+  color: inherit;
+  display: inline-grid;
+  grid-auto-flow: column;
+  gap: .5rem;
+  align-items: center;
+  align-self: stretch;
+  padding: 0 .5rem;
+}
+header > a:not(:hover) {
+  text-decoration: none;
 }
 
 main {
   flex: 1 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  place-content: center;
+  width: 100vw;
+  height: 100vh;
 }
 main > video {
   flex: 1 1 auto;
   background: transparent;
   display: none;
+  max-width: 100vw;
+}
+#localVideo {
+  transform: scaleX(-1);
 }
 
 aside {
